MODINV-1323 Fix statisticalCodeIds and administrativeNotes fields are cleared after update